--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,120 @@
-/*.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-*/
 :root{
   --primary: #ddd;
   --secondary: black;/*#eee;*/
   --back: #676767;/*#4484CE;*/
   --back2: #8E8A8E;
-  --fontt: white;
+  --font-color: #fff;
+  --font-color2: #ccc;
   --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 
 }
+
 *{
   margin:0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 .html{
   box-sizing: border-box;;
   font-family: Arial, Helvetica, sans-serif;
   padding: 0.8rem;
 }
 
-.body{
+body{
   line-height: 1.4;
+  height: 100%;
+  
+}
+.home, .professional, .contact, .experience{
+	position: relative;
+	opacity: 0.9;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	min-height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+}
+
+.home{
+  background-image: url('/code-coding-computer-574070.jpg');
+}
+
+.home .tran-showcase h1{
+	font-size: 5rem;
+}
+
+.home .tran-showcase h5{
+	font-size: 1.5rem;
+	padding: 0 0.4rem;
+}
+
+.home .tran-showcase h1 span{
+	color: green;
+}
+
+.contact{
+	background-image: url('/blur-close-up-code-546819.jpg');
+}
+
+.contact .showcase{
+	display: flex;
+	align-items: center;
+}
+
+.professional{
+	background-image: url('/apple-devices-computer-contemporary-234527.jpg');/*url('/business-computer-contemporary-218863.jpg');/*url('/black-and-white-blur-gray-34088.jpg');*/
+}
+
+.professional .tran-showcase h1{
+	color: var(--font-color);
+	font-size: 3rem;
+	text-align: center; 
+}
+
+.professional .tran-showcase h3{
+	font-size: 2rem;
+	color: var(--font-color);
+	padding: 1rem;
+	text-align: center; 
+}
+
+.list ul{
+
+}
+
+.list li{
+	list-style-type: none;
+	line-height: 2.5rem;
+	color: var(--font-color);
+	text-align: right;
+	display: grid;
+	grid-gap: 1rem;
+	grid-template-columns: 2fr 10fr;
+}
+
+.progress{
+	display: grid;
+	grid-template-columns: 11fr 1fr;
+}
+
+.experience{
+	background-image: url('/fog-foggy-landscape-897717.jpg');
+	min-height: 120vh;
+	color: var(--font-color)
+}
+
+.experience h1{
+	font-size: 3rem;
+	text-align: center;
 }
 
 .main{
-  background: var(--back2);
+  background: var(--back);
   z-index: -1;
 }
 
@@ -56,29 +124,28 @@
   padding: 1rem;
 }
 .navbar{
-/*  position: fixed;*/
+  position: fixed;
   top: 0;
   width: 100%;
   overflow: hidden;
   z-index: 1;
+  background: var(--back);
+  box-shadow: 1px 3px 10px black;
 }
 .navbar ul{
   margin: 0 50px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  justify-content: space-between;
   list-style: none;
-  padding: 0;
 }
 
 .navbar ul li a{
-  color: var(--fontt);
-  background: var(--back);
+  color: var(--font-color);
   display: block;
   text-decoration: none;
-  padding: 1.2rem;
+  padding: 1rem;
   text-align: center;
-  font-weight: bold;
-  box-shadow: var(--shadow);
+  font-size: 1.2rem;
 }
 .navbar ul li a:hover{
   color: var(--secondary);
@@ -87,57 +154,28 @@
   color: var(--secondary);
 }
 
-
-/*
-.navbar ul li a {
-  position: relative;
-  color: #000;
-  text-decoration: none;
+.showcase, .tran-showcase{
+	width: 60vw;
+	height: 70vh;
+	z-index: 1;
+	margin: 3rem auto;
+	padding: 2rem;
 }
 
-.navbar ul li a:hover {
-  color: #000;
+.showcase{
+	background-color: var(--back);
+	box-shadow: 1px 3px 10px black;
+	display: flex;
+	justify-content: center;
 }
-.navbar ul li a:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 5px;
-  bottom: 0;
-  left: 0;
-  background-color: #000;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
+
+.tran-showcase {
+	
 }
-.navbar ul li a:hover:before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
-}
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-*/
+
+
 @media(max-width: 1150px){
-  .showcase .block{
-    width: 100%;
-  }
-  .showcase .block{
-    padding: 3rem;
-    margin: auto;
-    width: 80%;
-    height: 50%;
-    margin-bottom: 100px;
-  }
-  .showcase .block:after{
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-  }
+
 }
 @media(max-width: 700px){
   .menubar{
@@ -170,45 +208,5 @@
   .navbar ul li a:active{
     color: var(--secondary);
   }
-  .main{
-    background: var(--back2);
-    z-index: -1;
-    padding: 5rem 0rem 5rem 0rem;
-    width: 100%;
-  }
-  .showcase{
-    padding: 10rem 0rem 0rem 0rem;
-
-  }
-
-  .showcase .block{
-    padding: 1rem;
-    margin: auto;
-    background-color: var(--back);
-    opacity: 1;
-    width: 80%;
-    height: 50%;
-    margin-bottom: 100px;
-  }
-  .showcase .block:after{
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-  }
-  .showcase .block h1{
-    font-size: 10vw;
-    padding: 0.5rem;
-    color: var(--fontt);
-    margin: 0.5rem;
-    max-width: 100%;
-  }
-  .showcase .block h2{
-    font-size: 4vw;
-    padding: 0.5rem 0.6rem;
-    margin: 0.5rem;
-    max-width: 100%;
-    color: var(--fontt);
-  }
-
 
 }
